--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -149,6 +149,7 @@
                         </li>
                         <li><a href="https://international.canada.ca/en/global-affairs/campaigns/canada-us-engagement">Canada's engagement with the U.S.</a></li>
                         <li><a href="https://www.canada.ca/en/department-finance/programs/international-trade-finance-policy/canadas-response-us-tariffs.html">Canada’s response to U.S. tariffs</a></li>
+                        <li><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/tariffs-tarifs/index-eng.html">Canadian tariffs on US steel, aluminum and  auto imports: How they apply at the border</a></li>
                     </ul>
                 </div>
             </section>
@@ -204,10 +205,6 @@
                                     </a>
                                 </h3>
                                 <p>Relief from the payment of tariffs or refund of tariffs already paid, template for submissions</p>
-                            </div>
-                            <div class="col-md-8">
-                                <h3><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/complaints-disputes/remission.html">Remission orders</a></h3>
-                                <p>Remission provides full or partial relief from federal tax, interest, penalty, or other debt paid or payable under legislation administered by the Canada Revenue Agency (CRA).</p>
                             </div>
                             <div class="col-md-8">
                                 <h3><a href="https://international.canada.ca/en/services/business/trade/tariffs-regulations">Tariffs, rules and regulations</a></h3>
@@ -295,10 +292,6 @@
                         <summary>Travelling <b>from</b> the United States to Canada</summary>
                         <div class="row">
                             <div class="col-md-8">
-                                <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/ivc-rnc-eng.html">Visitors to Canada</a></h3>
-                                <p>Find out if you can enter, travelling with animals, examining personal digital devices</p>
-                                <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/dte-acl/est-cal-eng.html">Estimate duty and taxes</a></h3>
-                                <p>This tool provides an <b>estimate only</b> and applies strictly to goods imported for <b>personal use</b>, surtaxes are not included</p>
                                 <h3><a href="https://travel.gc.ca/returning/customs">Customs</a></h3>
                                 <p>Information on what you can bring back to Canada, what you must declare, customs duties and taxes, and personal exemptions</p>
                                 <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/tariffs-tarifs/index-eng.html">Canadian tariffs of 25% on goods from the United States: How they apply at the border</a></h3>
@@ -332,11 +325,9 @@
                         <summary><b>Returning</b> to Canada from the United States</summary>
                         <div class="row">
                             <div class="col-md-8">
-                                <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/dte-acl/est-cal-eng.html">Estimate duty and taxes</a></h3>
-                                <p>This tool provides an <b>estimate only</b> and applies strictly to goods imported for <b>personal use</b>, surtaxes are not included</p>
                                 <h3><a href="https://travel.gc.ca/returning/customs">Customs</a></h3>
                                 <p>Information on what you can bring back to Canada, what you must declare, customs duties and taxes, and personal exemptions</p>
-                                <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/tariffs-tarifs/index-eng.html">Canadian tariffs of 25% on goods from the United States: How they apply at the border</a></h3>
+                                <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/tariffs-tarifs/index-eng.html">Canadian tariffs on US steel, aluminum and  auto imports: How they apply at the border</a></h3>
                                 <p>What goods the tariffs apply to, how the tariffs apply to travellers, how to calculate the tariffss</p>
                                 <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/bgb-rmf-eng.html">Bring goods across the border</a></h3>
                                 <p>Personal exemptions, alcohol and tobacco limits, restricted and prohibited goods, travelling with $10,000 or more</p>
