--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -282,7 +282,7 @@
                                 <h3><a href="https://travel.gc.ca/destinations/united-states">United States travel advice</a></h3>
                                 <p>Risk level, safety and security, entry and exit requirements, health, laws and culture, natural disasters and climate</p>
                                 <h3><a href="https://travel.gc.ca/travelling">Travel outside Canada</a></h3>
-                                <p>Travel advice and advisories, health and safety outside Canada, travel documents, types of travellers, travelling and money, safe travel planner</p>
+                                <p>Registration of Canadians abroad, health and safety outside Canada, travel documents, children and travel, types of travellers, travelling and money, living outside Canada</p>
                                 <h3><a href="https://inspection.canada.ca/en/animal-health/terrestrial-animals/exports/pets/dogs-usa">Dogs travelling to the United States</a></h3>
                                 <p>Entry requirements, dogs that do not meet the requirements</p>
                             </div>
