--- a/jmtesting/can-us-tariffs/tariffs-business-contact.html
+++ b/jmtesting/can-us-tariffs/tariffs-business-contact.html
@@ -127,8 +127,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <h1 property="name" id="wb-cont">Help for businesses</h1>
-                        <p>Description, tbd.</p>
+                        <h1 property="name" id="wb-cont">United States-Canada support: Contacts for businesses</h1>
+                        <p>Contact information for businesses navigating the current situation between Canada and the United States.</p>
                     </div>
                 </div>
                           <section class="gc-srvinfo">
