--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -127,8 +127,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <h1 property="name" id="wb-cont">United States and Canada supports</h1>
-                        <p>Support for businesses, workers, exporters and travellers affected by Canada-U.S. relations. Information on tariffs, CUSMA, and financial aid.</p>
+                        <h1 property="name" id="wb-cont">United States-Canada: Support for Canadians</h1>
+                        <p>Support and resources for businesses, workers, exporters and travellers affected by Canada-U.S. relations. Information on tariffs, CUSMA, and financial aid.</p>
                     </div>
                 </div>
             </div>
@@ -141,7 +141,6 @@
                                 Full list of U.S. products subject to counter tariffs
                             </a>
                         </li>
-                        <li><a href="https://ccp-pcc.cbsa-asfc.cloud-nuage.canada.ca/en/homepage">CARM client portal</a></li>
                         <li><a href="https://www.canada.ca/en/services/benefits/ei/temporary-measures-for-major-economic-conditions.html">Employment insurance measures</a></li>
                         <li><a href="https://www.canada.ca/en/news/canada-united-states-relations.html">Latest Canada-U.S. news</a></li>
                         <li>
@@ -210,6 +209,11 @@
                                 <h3><a href="https://international.canada.ca/en/services/business/trade/tariffs-regulations">Tariffs, rules and regulations</a></h3>
                                 <p>
                                     Tariff information and Harmonized System (HS) codes, export and import controls, Canadian sanctions, responsible business conduct abroad, trade agreements, negotiations and consultations
+                                </p>
+                            </div>
+                            <div class="col-md-8">
+                                <h3><a href="https://cbsa-asfc.gc.ca/services/carm-gcra/menu-eng.html">Overview: CARM</a></h3>
+                                <p>Assess and pay duties and taxes on imported commercial goods
                                 </p>
                             </div>
                             <div class="col-md-8">
@@ -285,6 +289,12 @@
                                 <p>Registration of Canadians abroad, health and safety outside Canada, travel documents, children and travel, types of travellers, travelling and money, living outside Canada</p>
                                 <h3><a href="https://inspection.canada.ca/en/animal-health/terrestrial-animals/exports/pets/dogs-usa">Dogs travelling to the United States</a></h3>
                                 <p>Entry requirements, dogs that do not meet the requirements</p>
+                            </div>
+                        </div>
+                                 <div class="row">
+                            <div class="col-md-8">
+                               <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/prog-menu-eng.html">Programs for trusted travellers</a></h3>
+                                <p>Learn about programs to make border crossings faster and easier for travellers and private or commercial operators</p>  
                             </div>
                         </div>
                     </details>
