--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -304,15 +304,14 @@
                             <div class="col-md-8">
                                 <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/menu-eng.html">Crossing the border into Canada</a></h3>
                                 <p>
-                                    Advance Declaration, programs for trusted travellers, secondary inspections, international event services, airport arrival kiosks and eGates, examining digital devices, how the CBSA collects, uses and
-                                    protects your information, Indigenous border mobility measures, cruise ship clearance procedures
+                                    Advance Declaration, international event services, airport arrival kiosks and eGates, examining digital devices, how the CBSA collects, uses and
+                                    protects your information, Indigenous border mobility measures, restricted and prohibited goods
                                 </p>
                                 <h3><a href="https://travel.gc.ca/returning/customs">Customs</a></h3>
                                 <p>Information on what you can bring back to Canada, what you must declare, customs duties and taxes, and personal exemptions</p>
-                                <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/gbi-rgf-eng.html">Plan your trip across the border</a></h3>
+                                <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/tt-cv-eng.html">Travel tips</a></h3>
                                 <p>
-                                    Border wait times, travel and identity documents, smart and secure border tools for travel and trade, border reminder checklist, travelling with a disability, travel health measures, CBSA offices,
-                                    reporting requirements for non-commercial aircraft and for private boaters
+                                    Travel and identity documents, travelling with a disability, border reminder checklist, reporting requirements
                                 </p>
                                 <h3><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/immigrate-canada/inadmissibility.html">Find out if you’re inadmissible </a></h3>
                                 <p>About inadmissibility, reasons you may be inadmissible, what to do if you’re inadmissible, overcome criminal convictions</p>
@@ -333,16 +332,11 @@
                             <div class="col-md-8">
                                  <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/menu-eng.html">Crossing the border into Canada</a></h3>
                                 <p>
-                                    Advance Declaration, programs for trusted travellers, secondary inspections, international event services, airport arrival kiosks and eGates, examining digital devices, how the CBSA collects, uses and
-                                    protects your information, Indigenous border mobility measures, cruise ship clearance procedures
+                                    Advance Declaration, programs for trusted travellers, secondary inspections, airport arrival kiosks and eGates, examining digital devices, how the CBSA collects, uses and
+                                    protects your information, Indigenous border mobility measures
                                 </p>
                                 <h3><a href="https://travel.gc.ca/returning/customs">Customs</a></h3>
                                 <p>Information on what you can bring back to Canada, what you must declare, customs duties and taxes, and personal exemptions</p>
-                                    <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/gbi-rgf-eng.html">Plan your trip across the border</a></h3>
-                                <p>
-                                    Border wait times, travel and identity documents, smart and secure border tools for travel and trade, border reminder checklist, travelling with a disability, travel health measures, CBSA offices,
-                                    reporting requirements for non-commercial aircraft and for private boaters
-                                </p>
                                 <h3><a href="https://inspection.canada.ca/en/food-safety-consumers/bring-food-personal-use">Bringing food into Canada for personal use</a></h3>
                                 <p>Find out if the item is allowed and under what conditions, items from the United States, items from outside the United States, be aware of the product risks, declare the product</p>
                                 <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/mrc-drc-eng.html">Moving or returning to Canada</a></h3>
