--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -9,7 +9,7 @@
         <meta name="description" content=" " />
         <meta name="author" content=" " />
         <meta name="dcterms.title" content="United States and Canada support" />
-        <meta name="dcterms.description" content=" " />
+        <meta name="dcterms.description" content="Support and resources for businesses, workers, exporters and travellers affected by Canada-U.S. relations. Information on tariffs, CUSMA, and financial aid." />
         <meta name="dcterms.creator" content=" " />
         <meta name="dcterms.language" content="eng" />
         <meta name="dcterms.subject" content="" />
@@ -280,6 +280,26 @@
                 <section class="gc-srvinfo">
                     <h2>Travelling</h2>
                     <details>
+                        <summary><b>Returning</b> to Canada from the United States</summary>
+                        <div class="row">
+                            <div class="col-md-8">
+                                 <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/menu-eng.html">Crossing the border into Canada</a></h3>
+                                <p>
+                                    Advance Declaration, programs for trusted travellers, secondary inspections, airport arrival kiosks and eGates, examining digital devices, how the CBSA collects, uses and
+                                    protects your information, Indigenous border mobility measures
+                                </p>
+                                <h3><a href="https://travel.gc.ca/returning/customs">Customs</a></h3>
+                                <p>Information on what you can bring back to Canada, what you must declare, customs duties and taxes, and personal exemptions</p>
+                                <h3><a href="https://inspection.canada.ca/en/food-safety-consumers/bring-food-personal-use">Bringing food into Canada for personal use</a></h3>
+                                <p>Find out if the item is allowed and under what conditions, items from the United States, items from outside the United States, be aware of the product risks, declare the product</p>
+                                <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/mrc-drc-eng.html">Moving or returning to Canada</a></h3>
+                                <p>Before moving or returning to Canada, items you can import duty- and tax-free, specifications for certain circumstances, declaring your goods upon arrival, restrictions</p>
+                                <h3><a href="https://inspection.canada.ca/en/importing-food-plants-animals/pets">Bringing animals into Canada</a></h3>
+                                <p>Find out what you need before you travel with your pet or import an animal</p>
+                            </div>
+                        </div>
+                    </details>
+                    <details>
                         <summary>Travelling <b>to</b> the United States from Canada</summary>
                         <div class="row">
                             <div class="col-md-8">
@@ -317,26 +337,6 @@
                                 <p>About inadmissibility, reasons you may be inadmissible, what to do if you’re inadmissible, overcome criminal convictions</p>
                                 <h3><a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/visit-canada.html">Visit Canada</a></h3>
                                 <p>Visitor visa, electronic travel authorization (eTA), visit Canada on business, transit through Canada</p>
-                                <h3><a href="https://inspection.canada.ca/en/food-safety-consumers/bring-food-personal-use">Bringing food into Canada for personal use</a></h3>
-                                <p>Find out if the item is allowed and under what conditions, items from the United States, items from outside the United States, be aware of the product risks, declare the product</p>
-                                <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/mrc-drc-eng.html">Moving or returning to Canada</a></h3>
-                                <p>Before moving or returning to Canada, items you can import duty- and tax-free, specifications for certain circumstances, declaring your goods upon arrival, restrictions</p>
-                                <h3><a href="https://inspection.canada.ca/en/importing-food-plants-animals/pets">Bringing animals into Canada</a></h3>
-                                <p>Find out what you need before you travel with your pet or import an animal</p>
-                            </div>
-                        </div>
-                    </details>
-                    <details>
-                        <summary><b>Returning</b> to Canada from the United States</summary>
-                        <div class="row">
-                            <div class="col-md-8">
-                                 <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/menu-eng.html">Crossing the border into Canada</a></h3>
-                                <p>
-                                    Advance Declaration, programs for trusted travellers, secondary inspections, airport arrival kiosks and eGates, examining digital devices, how the CBSA collects, uses and
-                                    protects your information, Indigenous border mobility measures
-                                </p>
-                                <h3><a href="https://travel.gc.ca/returning/customs">Customs</a></h3>
-                                <p>Information on what you can bring back to Canada, what you must declare, customs duties and taxes, and personal exemptions</p>
                                 <h3><a href="https://inspection.canada.ca/en/food-safety-consumers/bring-food-personal-use">Bringing food into Canada for personal use</a></h3>
                                 <p>Find out if the item is allowed and under what conditions, items from the United States, items from outside the United States, be aware of the product risks, declare the product</p>
                                 <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/mrc-drc-eng.html">Moving or returning to Canada</a></h3>
