--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -127,7 +127,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <h1 property="name" id="wb-cont">United States-Canada: Support for Canadians</h1>
+                        <h1 property="name" id="wb-cont">United States-Canada: Federal supports</h1>
                         <p>Support and resources for businesses, workers, exporters and travellers affected by Canada-U.S. relations. Information on tariffs, CUSMA, and financial aid.</p>
                     </div>
                 </div>
