--- a/chelsey/design/404_bilingual.html
+++ b/chelsey/design/404_bilingual.html
@@ -24,7 +24,7 @@ pageclass: cnt-wdth-lmtd
                 <div class="col-xs-9 col-sm-10 col-md-10">
                   <h1 id="wb-cont">Page not found</h1>
                   <p><span class="label label-danger">404 error</span></p>
-                  <p><a href="#">Go to the French version</a></p>
+                  <p><a href="#">Aller à la version française</a></p>
                 </div>
               </div>
               <p>The page you’re looking for may have been moved or deleted. Check that the web address (URL) is spelled correctly. Do not include special characters or spaces in the URL.</p>
@@ -71,7 +71,7 @@ pageclass: cnt-wdth-lmtd
                 <div class="col-xs-9 col-sm-10 col-md-10">
                   <h1 id="wb-cont">Page non trouvée</h1>
                   <p><span class="label label-danger">Erreur 404</span></p>
-                  <p><a href="#">Aller à la version anglaise</a></p>
+                  <p><a href="#">Go to the English version</a></p>
                 </div>
               </div>
               <p>La page que vous cherchez a peut-être été déplacée ou supprimée. Vérifiez que l'adresse web (URL) est correctement écrite. Ne pas inclure de caractères spéciaux ou d’espaces dans l’URL.</p>
