--- a/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-v2.html
+++ b/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-v2.html
@@ -77,7 +77,7 @@
                     <div class="col-md-8">
                         <nav class="gcweb-menu" typeof="SiteNavigationElement">
                             <h2 class="wb-inv">Menu</h2>
-                            <button type="button" aria-haspopup="true" aria-expanded="false"><span class="wb-inv">Menu </span>principal <span class="expicon glyphicon glyphicon-chevron-down"></span></button>
+                            <button type="button" aria-haspopup="true" aria-expanded="false"><span class="wb-inv">Menu </span>Menu<span class="expicon glyphicon glyphicon-chevron-down"></span></button>
                             <ul role="menu" aria-orientation="vertical" data-ajax-replace="https://www.canada.ca/content/dam/canada/sitemenu/sitemenu-v2-fr.html">
                                 <li role="presentation"><a role="menuitem" href="https://www.canada.ca/fr/services/emplois.html">Emplois et milieu de travail</a></li>
                                 <li role="presentation"><a role="menuitem" href="https://www.canada.ca/fr/services/immigration-citoyennete.html">Immigration et citoyenneté</a></li>
